test/regress/empty-quoted-module.txt
;;; TOOL: wat2wasm
;;; ERROR: 1
(module quote "")
(;; STDERR ;;;
out/test/regress/empty-quoted-module.txt:3:2: error: error in quoted module: @0x100000001: empty module
(module quote "")
 ^^^^^^
;;; STDERR ;;)
